--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p><strong>누구나, 언제든지, 지금 바로 시작 가능!</strong></p>
                 </div>
                 <div class="about-image">
-                    <img src="D:\LandingPage\ludio\assets\newgamepage.png" alt="루디오 서비스 설명">
+                    <img src="assets/newgamepage.png" alt="루디오 서비스 설명">
                 </div>
             </div>
         </div>
@@ -70,17 +70,17 @@
             </div>
             <div class="rewards-grid">
                 <div class="reward-card">
-                    <img src="D:\LandingPage\ludio\assets\starbucks-gift.png" alt="스타벅스 기프티콘">
+                    <img src="assets/starbucks-gift.png" alt="스타벅스 기프티콘">
                     <h3>스타벅스 기프티콘</h3>
                     <p>이기는 순간, 보상이 현실로</p>
                 </div>
                 <div class="reward-card">
-                    <img src="D:\LandingPage\ludio\assets\airpods.png" alt="에어팟">
+                    <img src="assets/airpods.png" alt="에어팟">
                     <h3>에어팟</h3>
                     <p>당신 손에 들어올 준비 완료</p>
                 </div>
                 <div class="reward-card">
-                    <img src="D:\LandingPage\ludio\assets\goldbar.png" alt="갤럭시 Z플립">
+                    <img src="assets/goldbar.png" alt="골드바">
                     <h3>미니 골드바</h3>
                     <p>보상? 기대하셔도 좋아요</p>
                 </div>
