--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <meta name="theme-color" content="#6C5CE7">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>루디오 - 게임으로 보상을 받는 리워드 플랫폼</title>
+    <title>루디오 - 우리들만의 게임 대결 플랫폼</title>
+    <link rel="icon" type="image/png" href="assets/somenail.png">
+    <link rel="apple-touch-icon" href="assets/somenail.png">
+    <link rel="shortcut icon" href="assets/somenail.png">
+    <meta property="og:title" content="루디오 - 우리들만의 게임 대결 플랫폼">
+    <meta property="og:description" content="게임하고 보상받는 세상, 루디오!">
+    <meta property="og:image" content="https://www.ludio.blog/assets/somenail.png">
+    <meta property="og:image:width" content="840">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://www.ludio.blog">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="루디오">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
