--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <link rel="icon" type="image/png" href="assets/somenail.png">
     <link rel="apple-touch-icon" href="assets/somenail.png">
     <link rel="shortcut icon" href="assets/somenail.png">
-    <meta property="og:title" content="루디오 - 우리들만의 게임 대결 플랫폼">
-    <meta property="og:description" content="게임하고 보상받는 세상, 루디오!">
+    <meta property="og:title" content="루디오 - 게임하고 보상받는 세상">
+    <meta property="og:description" content="게임 한 판으로 에어팟, 기프티콘, 골드바까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
     <meta property="og:image" content="https://www.ludio.blog/assets/somenail.png">
-    <meta property="og:image:width" content="840">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="800">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://www.ludio.blog">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="루디오">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="루디오 - 게임하고 보상받는 세상">
+    <meta name="twitter:description" content="게임 한 판으로 에어팟, 기프티콘, 골드바까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
+    <meta name="twitter:image" content="https://www.ludio.blog/assets/somenail.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
