--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="assets/somenail.png">
     <meta property="og:title" content="루디오 - 게임하고 보상받는 세상">
     <meta property="og:description" content="게임 한 판으로 에어팟, 기프티콘, 골드바까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
-    <meta property="og:image" content="https://www.ludio.blog/assets/somenail.png">
+    <meta property="og:image" content="https://www.ludio.blog/assets/somenail_kakao.png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="800">
     <meta property="og:image:type" content="image/png">
@@ -37,6 +37,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">루디오란?</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                     <li><a href="#download" class="cta-button">앱 다운로드</a></li>
                 </ul>
             </nav>
@@ -106,6 +107,45 @@
         </div>
     </section>
 
+    <section id="faq">
+        <div class="container">
+            <div class="section-header">
+                <h2>자주 묻는 질문</h2>
+            </div>
+            <div class="faq-content">
+                <div class="faq-item">
+                    <h3>루디오는 어떤 서비스인가요?</h3>
+                    <p>루디오는 누구나 즐기는 모든 게임에서 실력을 겨루고, 승리하면 보상을 받을 수 있는 게임 대결 플랫폼입니다.
+                        롤(LoL), 발로란트, 오버워치부터 인디게임, 모바일 게임까지 게임 종류 제한 없이 참여할 수 있어요.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>정말 어떤 게임이든 참가할 수 있나요?</h3>
+                    <p>네! 루디오는 특정 게임만 지원하지 않고, 유저가 원하는 게임이라면 무엇이든 대결을 만들 수 있습니다.
+                        PC 게임, 콘솔, 모바일 모두 가능하며, 유저끼리의 합의만 있다면 오프라인 게임도 포함될 수 있어요.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>게임을 어떻게 시작하나요?</h3>
+                    <p>대결 리스트에서 원하는 게임을 선택하고 참가하면, 상대방과 채팅을 통해 일정을 조율한 뒤 게임을 시작할 수 있어요.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>게임 외에도 콘텐츠로 참여 가능한가요?</h3>
+                    <p>루디오는 단순한 대결뿐 아니라, 속도 클리어, 미션 성공, 점수 경쟁 같은 창의적인 룰도 환영해요.
+                        당신의 방식대로 게임을 만들어 보세요!</p>
+                </div>
+                <div class="faq-item">
+                    <h3>보상은 어떻게 받나요?</h3>
+                    <p>승리할 때마다 캔디가 쌓이고, 캔디로 에어팟, 기프티콘, 골드바 등 실제 상품에 응모할 수 있어요.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>어떤 기준으로 승패를 판별하나요?</h3>
+                    <p>승패는 대결을 만든 호스트가 정한 기준에 따라 판별되며,
+                        최종 결과도 호스트가 직접 결정합니다.
+                        참가 전, 다른 유저들의 리뷰를 확인해 호스트의 신뢰도를 판단할 수 있어요.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="download">
         <div class="container">
             <div class="section-header">
@@ -138,6 +178,7 @@
                         <h4>서비스</h4>
                         <ul>
                             <li><a href="#about">루디오란?</a></li>
+                            <li><a href="#faq">FAQ</a></li>
                         </ul>
                     </div>
                     <div class="footer-link-group">
@@ -145,6 +186,17 @@
                         <ul>
                             <li><a href="terms.html">이용약관</a></li>
                             <li><a href="privacy.html">개인정보처리방침</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-link-group">
+                        <h4>소셜 미디어</h4>
+                        <ul>
+                            <li>
+                                <a href="https://www.instagram.com/ludio_official/" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/instaGroup.png" alt="인스타그램" style="width: 24px; height: 24px; vertical-align: middle;">
+                                    인스타그램
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
