--- a/terms.html
+++ b/terms.html
@@ -59,6 +59,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html#about">루디오란?</a></li>
+                    <li><a href="index.html#faq">FAQ</a></li>
                     <li><a href="index.html#download" class="cta-button">앱 다운로드</a></li>
                 </ul>
             </nav>
@@ -165,6 +166,7 @@
                         <h4>서비스</h4>
                         <ul>
                             <li><a href="index.html#about">루디오란?</a></li>
+                            <li><a href="index.html#faq">FAQ</a></li>
                         </ul>
                     </div>
                     <div class="footer-link-group">
