--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'G-ZSZP52V6PG');
     </script>
+    <meta name="google-site-verification" content="ABC123xyz456..." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#6C5CE7">
@@ -20,7 +21,7 @@
     <link rel="apple-touch-icon" href="assets/somenail.png">
     <link rel="shortcut icon" href="assets/somenail.png">
     <meta property="og:title" content="루디오 - 게임하고 보상받는 세상">
-    <meta property="og:description" content="게임 한 판으로 에어팟, 기프티콘, 골드바까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
+    <meta property="og:description" content="게임 한 판으로 기프티콘, 네이버페이까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
     <meta property="og:image" content="https://www.ludio.blog/assets/somenail_kakao.png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="800">
@@ -32,7 +33,7 @@
     <meta property="og:locale:alternate" content="en_US">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="루디오 - 게임하고 보상받는 세상">
-    <meta name="twitter:description" content="게임 한 판으로 에어팟, 기프티콘, 골드바까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
+    <meta name="twitter:description" content="게임 한 판으로 기프티콘, 네이버페이까지! 롤, 발로란트, 오버워치 등 모든 게임에서 실력 대결을 즐기고 보상을 받으세요.">
     <meta name="twitter:image" content="https://www.ludio.blog/assets/somenail.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
@@ -41,11 +42,14 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="assets/ic_launcher.png" alt="루디오 로고">
+                <a href="index.html">
+                    <img src="assets/ic_launcher.png" alt="루디오 로고">
+                </a>
             </div>
             <nav>
                 <ul>
                     <li><a href="#about">루디오란?</a></li>
+                    <li><a href="rewards.html">경품</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#download" class="cta-button">앱 다운로드</a></li>
                 </ul>
@@ -56,8 +60,8 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>친구는 루디오로 에어팟 받았대.<br>넌 아직도 게임만 해?</h1>
-                <p>좋아하는 게임 한 판으로<br>기프티콘, 에어팟, 골드바까지!<br>지금 바로 실력을 증명하세요</p>
+                <h1>친구는 루디오로 네이버페이 50만원 받았대.<br>넌 아직도 게임만 해?</h1>
+                <p>좋아하는 게임 한 판으로<br>기프티콘, 네이버페이까지!<br>지금 바로 실력을 증명하세요</p>
                 <div class="hero-buttons">
                     <a href="#download" class="primary-button">지금 시작하기</a>
                 </div>
@@ -77,8 +81,8 @@
                 <div class="about-text">
                     <p><strong>루디오는 게임으로 보상을 받는 리워드 플랫폼입니다.</strong></p>
                     <p>롤(LOL), 발로란트, 오버워치 등 <strong>모든 게임</strong>에서 실력 대결을 즐겨보세요.<p>
-                    <p>이기면 <strong>사탕(포인트)</strong>이 쌓입니다.</p>
-                    <p>이 사탕은 <strong>기프티콘, 아이패드, 에어팟</strong> 등 실제 상품으로 응모할 수 있어요!</p>
+                    <p>이기면 <strong>캔디(포인트)</strong>가 쌓입니다.</p>
+                    <p>이 캔디는 <strong>기프티콘, 네이버페이</strong> 등 실제 상품으로 응모할 수 있어요!</p>
                     <p><strong>누구나, 언제든지, 지금 바로 시작 가능!</strong></p>
                 </div>
                 <div class="about-image">
@@ -103,13 +107,13 @@
                     <p>이기는 순간, 보상이 현실로</p>
                 </div>
                 <div class="reward-card">
-                    <img src="assets/airpods.png" alt="에어팟">
-                    <h3>에어팟</h3>
+                    <img src="assets/naverpay50.png" alt="네이버페이 50만원">
+                    <h3>네이버페이 50만원</h3>
                     <p>당신 손에 들어올 준비 완료</p>
                 </div>
                 <div class="reward-card">
-                    <img src="assets/goldbar.png" alt="골드바">
-                    <h3>미니 골드바</h3>
+                    <img src="assets/gs2550000.png" alt="편의점 모바일 상품권">
+                    <h3>편의점 모바일 상품권</h3>
                     <p>보상? 기대하셔도 좋아요</p>
                 </div>
             </div>
@@ -143,7 +147,7 @@
                 </div>
                 <div class="faq-item">
                     <h3>보상은 어떻게 받나요?</h3>
-                    <p>승리할 때마다 캔디가 쌓이고, 캔디로 에어팟, 기프티콘, 골드바 등 실제 상품에 응모할 수 있어요.</p>
+                    <p>승리할 때마다 캔디가 쌓이고, 캔디로 기프티콘, 네이버페이 등 실제 상품에 응모할 수 있어요.</p>
                 </div>
                 <div class="faq-item">
                     <h3>어떤 기준으로 승패를 판별하나요?</h3>
@@ -161,7 +165,7 @@
                 <h2 style="color: #000000;">게임하고 보상받는 루디오, 지금 다운로드하세요!</h2>
                 <p style="text-align:center; color:#ffffff; font-size:14px;">
                     앱을 설치하고 한 판 대결로<br>
-                    스타벅스, 에어팟, 골드바를 받을 기회를 잡으세요!
+                    스타벅스, 베스킨라빈스, 네이버페이를 받을 기회를 잡으세요!
                 </p>
             </div>
             <div class="download-buttons">
