--- a/rewards.html
+++ b/rewards.html
@@ -134,6 +134,37 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="category">
+                    <h2>올리브영</h2>
+                    <div class="rewards-grid">
+                        <div class="reward-card">
+                            <img src="assets/oliveyoung10000.png" alt="올리브영 모바일 상품권 1만원">
+                            <h3>모바일 상품권 1만원</h3>
+                            <p>필요 캔디: 20</p>
+                        </div>
+                        <div class="reward-card">
+                            <img src="assets/oliveyoung20000.png" alt="올리브영 모바일 상품권 2만원">
+                            <h3>모바일 상품권 2만원</h3>
+                            <p>필요 캔디: 40</p>
+                        </div>
+                        <div class="reward-card">
+                            <img src="assets/oliveyoung30000.png" alt="올리브영 모바일 상품권 3만원">
+                            <h3>모바일 상품권 3만원</h3>
+                            <p>필요 캔디: 60</p>
+                        </div>
+                        <div class="reward-card">
+                            <img src="assets/oliveyoung50000.png" alt="올리브영 모바일 상품권 5만원">
+                            <h3>모바일 상품권 5만원</h3>
+                            <p>필요 캔디: 100</p>
+                        </div>
+                        <div class="reward-card">
+                            <img src="assets/oliveyoung100000.png" alt="올리브영 모바일 상품권 10만원">
+                            <h3>모바일 상품권 10만원</h3>
+                            <p>필요 캔디: 200</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="rewards-info">
@@ -159,6 +190,7 @@
                         <h4>서비스</h4>
                         <ul>
                             <li><a href="index.html#about">루디오란?</a></li>
+                            <li><a href="rewards.html">경품</a></li>
                             <li><a href="index.html#faq">FAQ</a></li>
                         </ul>
                     </div>
