--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                         <h4>서비스</h4>
                         <ul>
                             <li><a href="#about">루디오란?</a></li>
+                            <li><a href="rewards.html">경품</a></li>
                             <li><a href="#faq">FAQ</a></li>
                         </ul>
                     </div>
