--- a/privacy.html
+++ b/privacy.html
@@ -116,6 +116,7 @@
                         <h4>서비스</h4>
                         <ul>
                             <li><a href="index.html#about">루디오란?</a></li>
+                            <li><a href="rewards.html">경품</a></li>
                             <li><a href="index.html#faq">FAQ</a></li>
                         </ul>
                     </div>
