--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 <div class="footer-logo">
                     <img src="assets/ic_launcher.png" alt="루디오 로고">
                     <p>© 2025 루디오. 게임은 이제 보상과 함께.<br>우리들만의 게임 대결 플랫폼.</p>
+                    <p style="margin-top: 10px; color: rgba(255, 255, 255, 0.7);">고객센터: help.ludio@gmail.com</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-link-group">
