--- a/index.html
+++ b/index.html
@@ -120,6 +120,104 @@
         </div>
     </section>
 
+    <section id="reviews">
+        <div class="container">
+            <div class="section-header">
+                <h2>고객분들의 베타테스트 실제후기</h2>
+                <p style="text-align:center; color:#000000; font-size:18px; margin-top: 10px; font-weight: 500; opacity: 0.9;">
+                    소중한 리뷰를 남겨주셔서 진심으로 감사드립니다.
+                </p>
+            </div>
+            <div class="reviews-grid">
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>uri**</h4>
+                            
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>처음엔 재미로 했는데, 당첨 문자 한 번 오니까 계속 하고 싶어져요</p>
+                    </div>
+                </div>
+
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>kmkm53**</h4>
+                            
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>매일 이기고 응모하는 게 제 루틴이 됐어요. 이번에는 될까? 하는 기대가 있어요</p>
+                    </div>
+                </div>
+
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>disi**</h4>
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>처음에는 반신반의했는데, 실제로 기프티콘도 받고 하니까 너무 좋네요 ㅎㅎ 앞으로도 자주 이용할 것 같아요~!</p>
+                    </div>
+                </div>
+
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>jjang**</h4>
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>친구랑 같이 대결하면서 네이버페이도 받고 너무 재밌어요! 이런 앱이 있다니 대박이에요</p>
+                    </div>
+                </div>
+
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>min**</h4>
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>회사에서 개털리고 와서 루디오 이기면 좀 회복됨. 당첨까지 되면 개꿀</p>
+                    </div>
+                </div>
+
+                <div class="review-card">
+                    <div class="review-header">
+                        <div class="user-info">
+                            <h4>ohdji**</h4>
+                        </div>
+                        <div class="review-rating">
+                            <span class="stars">★★★★★</span>
+                        </div>
+                    </div>
+                    <div class="review-content">
+                        <p>내 실력으로 받은 보상이라 그런가, 5천원짜리 기프티콘도 뭔가 존나 뿌듯함</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="faq">
         <div class="container">
             <div class="section-header">
